--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,6 +85,7 @@
 
 html {
   width: 500px;
+  overflow-x: hidden;
 }
 
 body {
@@ -93,4 +94,5 @@ body {
   font-family: var(--font-family-base);
   background-color: var(--color-background);
   color: var(--color-text-primary);
+  overflow-x: hidden;
 }
